--- a/public/css/app.css
+++ b/public/css/app.css
@@ -388,6 +388,28 @@ body {
   display: flex;
 }
 
+.l-main__mainArea.-oneColumn {
+  width: 75%;
+  margin: 0 auto;
+}
+
+.l-main__mainArea.-oneColumn_auth {
+  width: 50%;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 768px) {
+  .l-main__mainArea.-oneColumn_auth {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  .l-main__mainArea.-oneColumn_auth {
+    width: 100%;
+  }
+}
+
 .l-main__mainArea.-twoColumns {
   width: 75%;
 }
@@ -3884,6 +3906,11 @@ body {
   margin-bottom: 10px;
 }
 
+.p-login__rememberWrap {
+  display: flex;
+  font-size: 13px;
+}
+
 .p-login__remember {
   margin-right: 3px;
 }
@@ -3900,6 +3927,20 @@ body {
 @media screen and (max-width: 320px) {
   .p-login__submitBtn {
     font-size: 13px;
+  }
+}
+
+.p-login__passReminder {
+  position: absolute;
+  right: 0;
+  bottom: -23px;
+  font-size: 12px;
+  color: #495057;
+}
+
+@media screen and (max-width: 414px) {
+  .p-login__passReminder {
+    right: 10px;
   }
 }
 
