Laravel / ログイン画面実装

--- a/resources/sass/object/project/_p-header.scss
+++ b/resources/sass/object/project/_p-header.scss
@@ -149,6 +149,7 @@
          @include border-radius;
          padding: 10px 13px;
          margin-top: 1px;
+         font-size: 13px;
          background-color: $primary-light;
       }
    }
