--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1856,6 +1856,7 @@ body {
   border-radius: 2px;
   padding: 10px 13px;
   margin-top: 1px;
+  font-size: 13px;
   background-color: #bedcfd;
 }
 
