--- a/resources/sass/object/project/_p-work-form.scss
+++ b/resources/sass/object/project/_p-work-form.scss
@@ -102,7 +102,7 @@
       }
       &.-endRecruitment,
       &.-hopeDeadline,
-      &.-tieUp {
+      &.-contract {
          width: 70%;
          @include mq('md') {
             width: 100%;
