--- a/resources/sass/object/project/_p-dm.scss
+++ b/resources/sass/object/project/_p-dm.scss
@@ -138,6 +138,7 @@
       position: relative;
       flex-basis: 15%;
       padding: 15px 15px 50px 15px;
+      margin: 0;
       background: $gray-400;
       & > textarea {
          border: none;
