--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1133,48 +1133,24 @@ body {
 }
 
 .c-pagination {
-  margin-top: 20px;
-}
-
-@media screen and (max-width: 320px) {
-  .c-pagination {
-    margin-top: 15px;
-  }
-}
-
-.c-pagination__lists {
   display: flex;
+  align-items: center;
   justify-content: center;
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
+  margin-top: 25px;
 }
 
-.c-pagination__list {
-  padding: 10px;
-  margin: 0 3px;
+.c-pagination__btn {
+  border-radius: 2px;
+  padding: 8px 15px;
+  margin: 0 20px;
   font-size: 14px;
-  color: #222;
-  text-decoration: none;
-  background-color: #fff;
-}
-
-@media screen and (max-width: 414px) {
-  .c-pagination__list {
-    margin: 0 5px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .c-pagination__list {
-    margin: 0 3px;
-  }
-}
-
-.c-pagination__list.is-active {
-  font-weight: bold;
-  color: #fff;
+  color: white;
   background-color: #0081ff;
+}
+
+.c-pagination__btn.-disabled {
+  pointer-events: none;
+  background-color: #adb5bd;
 }
 
 .c-h1__head {
