--- a/resources/sass/object/component/_c-pagination.scss
+++ b/resources/sass/object/component/_c-pagination.scss
@@ -2,34 +2,18 @@
 // ページネーション
 // **********************************
 .c-pagination {
-   margin-top: 20px;
-   @include mq('3xs') {
-      margin-top: 15px;
-   }
-   &__lists {
-      display: flex;
-      justify-content: center;
-      padding: 0;
-      margin: 0;
-      list-style-type: none;
-   }
-   &__list {
-      padding: 10px;
-      margin: 0 3px;
+   @include flex-center;
+   margin-top: 25px;
+   &__btn {
+      @include border-radius;
+      padding: 8px 15px;
+      margin: 0 20px;
       font-size: 14px;
-      color: #222;
-      text-decoration: none;
-      background-color: #fff;
-      @include mq('xs') {
-         margin: 0 5px;
-      }
-      @include mq('3xs') {
-         margin: 0 3px;
-      }
-      &.is-active {
-         font-weight: bold;
-         color: $white;
-         background-color: $primary;
+      color: white;
+      background-color: $primary;
+      &.-disabled {
+         pointer-events: none;
+         background-color: $gray-500;
       }
    }
 }
