--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1615,6 +1615,7 @@ body {
 
 .p-dm__msgArea {
   flex-basis: 85%;
+  min-height: 500px;
   max-height: 500px;
   overflow: scroll;
   overflow-x: hidden;
