--- a/resources/sass/object/project/_p-dm.scss
+++ b/resources/sass/object/project/_p-dm.scss
@@ -90,6 +90,7 @@
    }
    &__msgArea {
       flex-basis: 85%;
+      min-height: 500px;
       max-height: 500px;
       overflow: scroll;
       overflow-x: hidden;
