--- a/resources/sass/object/project/_p-work-detail.scss
+++ b/resources/sass/object/project/_p-work-detail.scss
@@ -347,6 +347,12 @@
          padding: 15px 50px;
          font-size: 14px;
       }
+      &.-stop {
+         background-color: $gray-600;
+      }
+      &.-end {
+         background-color: $gray-600;
+      }
    }
 
    // =========================
