--- a/resources/sass/object/project/_p-applicant.scss
+++ b/resources/sass/object/project/_p-applicant.scss
@@ -35,6 +35,7 @@
       @include border-radius('all', 5px);
       display: flex;
       justify-content: space-between;
+      margin-bottom: 10px;
       background-color: $gray-100;
       border: 1px solid $gray-300;
    }
