--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1454,36 +1454,41 @@ body {
   margin-right: 4px;
 }
 
-.p-applicant__decideBtn {
+.p-applicant__decideForm {
   border-radius: 0 5px 5px 0;
   flex-basis: 20%;
-  font-size: 14px;
-  color: #fff;
 }
 
 @media screen and (max-width: 414px) {
-  .p-applicant__decideBtn {
+  .p-applicant__decideForm {
     flex-basis: 30%;
     font-size: 13px;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .p-applicant__decideBtn {
+  .p-applicant__decideForm {
     font-size: 12px;
   }
 }
 
-.p-applicant__decideBtn.-decide {
+.p-applicant__decideForm.-decide {
   background-color: #0081ff;
 }
 
-.p-applicant__decideBtn.-decided {
+.p-applicant__decideForm.-decided {
   background-color: #e83e8c;
 }
 
-.p-applicant__decideBtn.-wait {
+.p-applicant__decideForm.-wait {
   background-color: #28a745;
+}
+
+.p-applicant__decideBtn {
+  width: 100%;
+  height: 100%;
+  font-size: 14px;
+  color: #fff;
 }
 
 .p-changePass__body {
