--- a/resources/sass/object/project/_p-applicant.scss
+++ b/resources/sass/object/project/_p-applicant.scss
@@ -105,11 +105,9 @@
       margin: 0;
       margin-right: 4px;
    }
-   &__decideBtn {
+   &__decideForm {
       @include border-radius('right', 5px);
       flex-basis: 20%;
-      font-size: 14px;
-      color: $white;
       @include mq('xs') {
          flex-basis: 30%;
          font-size: 13px;
@@ -126,5 +124,11 @@
       &.-wait {
          background-color: $green;
       }
+   }
+   &__decideBtn {
+      width: 100%;
+      height: 100%;
+      font-size: 14px;
+      color: $white;
    }
 }
