--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1293,10 +1293,34 @@ body {
 }
 
 .c-h2__noItems {
-  margin: 16px 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 23px;
   font-size: 14px;
   color: #6c757d;
   text-align: center;
+}
+
+.c-h2__noItems.-notification {
+  padding-top: 41px;
+}
+
+.c-h2__noItems.-order {
+  padding-right: 20px;
+}
+
+.c-h2__noItems.-apply {
+  padding-right: 27px;
+}
+
+.c-h2__noItems.-pubmsg {
+  padding-top: 40px;
+  padding-left: 15px;
+}
+
+.c-h2__noItems.-dm {
+  padding-top: 40px;
+  padding-left: 10px;
 }
 
 .p-applicant__body {
@@ -2638,13 +2662,12 @@ body {
   }
 }
 
-.p-mypage__notificationBody {
-  min-height: 97px;
-  padding: 20px;
+.p-mypage__secBody {
+  min-height: 100px;
 }
 
 @media screen and (max-width: 414px) {
-  .p-mypage__notificationBody {
+  .p-mypage__secBody {
     padding: 15px 10px;
   }
 }
