--- a/resources/sass/object/project/auth/_p-reset.scss
+++ b/resources/sass/object/project/auth/_p-reset.scss
@@ -1,8 +1,17 @@
 // **********************************
 // ユーザー登録画面
 // **********************************
-.p-register {
+.p-reset {
    padding-top: 8vh;
+   &__resetMsg {
+      @include border-radius('all', 10px);
+      padding: 10px 20px;
+      margin-top: -20px;
+      margin-bottom: 20px;
+      font-size: 13px;
+      text-align: center;
+      background-color: $primary-light;
+   }
    &__body {
       padding: 50px;
       @include mq('xs') {
@@ -18,6 +27,5 @@
    &__inputWrap {
       display: flex;
       flex-direction: column;
-      margin-bottom: 10px;
    }
 }
