Coding / class名変更 / contractMoney -> contractPrice

--- a/resources/sass/object/component/_c-card.scss
+++ b/resources/sass/object/component/_c-card.scss
@@ -175,7 +175,7 @@
          margin-left: 6px;
       }
    }
-   &__contractMoney {
+   &__contractPrice {
       margin-top: 4px;
       font-size: 12px;
       @include mq('xs') {
