Coding / class名変更 / ...BodyMoney -> ...BodyPrice

--- a/resources/sass/object/project/_p-work-detail.scss
+++ b/resources/sass/object/project/_p-work-detail.scss
@@ -242,7 +242,7 @@
          text-align: center;
       }
    }
-   &__infoLowerBodyMoney {
+   &__infoLowerBodyPrice {
       margin-top: 5px;
       font-size: 13px;
       @include mq('xs') {
