--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1008,6 +1008,7 @@ body {
 }
 
 .c-dmMsgCard__mainAreaWrap {
+  width: 100%;
   padding-left: 15px;
   overflow: hidden;
 }
@@ -1044,7 +1045,7 @@ body {
 }
 
 .c-dmMsgCard__basicInfo {
-  margin-top: 8px;
+  margin-top: 6px;
 }
 
 @media screen and (max-width: 414px) {
@@ -1062,6 +1063,7 @@ body {
 }
 
 .c-dmMsgCard__time {
+  margin-top: 4px;
   font-size: 12px;
   color: #495057;
 }
