--- a/resources/sass/foundation/_f-base.scss
+++ b/resources/sass/foundation/_f-base.scss
@@ -5,7 +5,8 @@
 body {
    display: flex;
    flex-direction: column;
-   font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
+   font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN',
+      'Hiragino Sans', Meiryo, sans-serif;
    background-color: $base;
 }
 *,
