Laravel / 仕事入力フォームの修正

--- a/resources/sass/object/component/_c-form.scss
+++ b/resources/sass/object/component/_c-form.scss
@@ -27,6 +27,12 @@
          font-size: 12px;
       }
    }
+   &__error {
+      display: inline-block;
+      &.-priceLower {
+         margin-bottom: 5px;
+      }
+   }
    &__textarea {
       @include letter-settings;
       @include border-radius;
