--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1141,6 +1141,14 @@ body {
   }
 }
 
+.c-form__error {
+  display: inline-block;
+}
+
+.c-form__error.-priceLower {
+  margin-bottom: 5px;
+}
+
 .c-form__textarea {
   line-height: 1.3;
   letter-spacing: 0.5px;
@@ -3881,14 +3889,14 @@ body {
   }
 }
 
-.p-workForm__wrap.-money {
+.p-workForm__wrap.-price {
   margin-top: -63px;
   visibility: hidden;
   opacity: 0;
   transition: 0.2s;
 }
 
-.p-workForm__wrap.-money.is-active {
+.p-workForm__wrap.-price.is-active {
   margin-top: 0;
   visibility: visible;
   opacity: 1;
@@ -3911,7 +3919,7 @@ body {
   }
 }
 
-.p-workForm__label.-money::before {
+.p-workForm__label.-price::before {
   position: absolute;
   top: 22px;
   left: 2px;
@@ -3921,7 +3929,7 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-  .p-workForm__label.-money::before {
+  .p-workForm__label.-price::before {
     top: 1px;
     left: 78px;
   }
@@ -3946,7 +3954,7 @@ body {
   }
 }
 
-.p-workForm__moneyWrap > span {
+.p-workForm__priceWrap > span {
   margin: 0 5px;
   font-size: 14px;
   color: black;
@@ -3990,12 +3998,12 @@ body {
   }
 }
 
-.p-workForm__input.-money {
+.p-workForm__input.-price {
   width: 30%;
 }
 
 @media screen and (max-width: 768px) {
-  .p-workForm__input.-money + span {
+  .p-workForm__input.-price + span {
     font-size: 13px;
   }
 }
